# llamadart

./: .gitignore  .gitmodules  .pubignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  dartdoc_options.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: build_native.yml
android/: CMakeLists.txt
docker/: .dockerignore  Dockerfile  build-docker.sh  docker-compose.yaml
example/: README.md
example/basic_app/: README.md  pubspec.yaml
example/basic_app/lib/: models.dart
example/basic_app/lib/services/: llama_service.dart  model_service.dart
example/chat_app/: README.md  build_log.txt  build_log_native.txt  pubspec.yaml
example/chat_app/android/app/: build.gradle.kts
example/chat_app/android/app/src/main/kotlin/com/example/llamadart_chat_example/: MainActivity.kt
example/chat_app/ios/: Podfile
example/chat_app/lib/: chat_screen.dart  main.dart
example/chat_app/lib/models/: chat_message.dart  chat_model.dart  chat_settings.dart  downloadable_model.dart
example/chat_app/lib/providers/: chat_provider.dart
example/chat_app/lib/screens/: chat_screen.dart  model_selection_screen.dart
example/chat_app/lib/services/: chat_service.dart  model_service.dart  settings_service.dart
example/chat_app/lib/widgets/: chat_app_bar_title.dart  chat_input.dart  clear_chat_button.dart  message_bubble.dart  model_card.dart  pruning_indicator.dart  settings_icon.dart  settings_sheet.dart  welcome_view.dart
example/chat_app/linux/runner/: my_application.cc
example/chat_app/web/: index.html
example/chat_app/windows/: CMakeLists.txt
example/chat_app/windows/flutter/: generated_plugins.cmake
example/chat_app/windows/runner/: Runner.rc  main.cpp
example/training_notebook/: lora_training.ipynb
hook/: build.dart
ios/: llamadart.podspec
ios/Classes/: LlamaDartPlugin.swift
ios/Frameworks/llama.xcframework/: Info.plist
ios/Frameworks/llama.xcframework/ios-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/ios-arm64/llama.framework/: llama
ios/Frameworks/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
ios/Frameworks/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
ios/Frameworks/llama.xcframework/tvos-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/tvos-arm64/llama.framework/: llama
ios/Frameworks/llama.xcframework/tvos-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/tvos-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
ios/Frameworks/llama.xcframework/xros-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/xros-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/xros-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
lib/: llamadart.dart
lib/src/: chat_template_processor.dart  exceptions.dart  llama_backend_interface.dart  llama_engine.dart  llama_service_interface.dart  llama_service_native.dart  llama_service_stub.dart  llama_service_web.dart  llama_tokenizer.dart  loader.dart  native_helpers.dart  setup_utils.dart
lib/src/models/: generation_params.dart  gpu_backend.dart  llama_chat_message.dart  llama_chat_template_result.dart  llama_log_level.dart  lora_adapter_config.dart  model_params.dart
lib/src/native/: native_backend.dart  worker.dart
lib/src/web/: web_backend.dart  wllama_interop.dart
linux/: CMakeLists.txt
macos/: llamadart.podspec
macos/Classes/: force_link.c
scripts/: Dockerfile.linux  build_android.sh  build_apple.sh  build_linux.sh  build_linux_arm64.sh  build_linux_x64.sh  build_windows.ps1  build_windows_cross.sh  build_windows_docker.sh  build_windows_mingw.sh  verify_app_linux.sh  verify_linux_docker.sh  verify_local_builds.sh
src/native/: CMakeLists.txt
test/: llamadart_test.dart  simple_check.dart  template_test.dart  test_helper.dart
windows/: CMakeLists.txt
